Make the app establishment-agnostic (settings, branding, filieres, rooms, NLP, storage)
- Add AppSettings singleton entity + DAO/service to persist establishment-level configuration (institution name, sub-title, academic year, document title, logo bytes, history storage, NLP)
- Add Settings page (/settings.do) with three sections: branding, history storage, NLP
- Replace hardcoded ENSAH branding (text + t1.png logo) with values served from AppSettings; PDFs/DOCX/PVs render dynamic header text and academic year
- Replace hardcoded GI/ID/TDIA filiere recognition with generic uppercase normalization; replace .badge-GI/ID/TDIA CSS with auto-generated colors via util.FiliereColors
- Drop ENSAH-specific room defaults (S3 AB, S4 AB, S3 NB, S2 NB, AMPHI A) and the ANCIEN BLOC/NOUVEAU BLOC normalization patterns; block field is now optional
- Make NLP truly optional: NlpServiceImpl resolves config lazily from AppSettings; falls back to a heuristic (token-overlap + simple English detection) when disabled or any API call fails
- Add util.HistoryStorage abstraction with LOCAL and S3-compatible backends (raw HTTP + AWS SigV4, no SDK); user can switch backends from /settings.do without restart
- Migrate all getHistoryFolder()/historyDir usages in FrontController to HistoryStorage
- Add Settings link to navbar of all JSPs (and Settings card on index page)

Co-authored-by: YASSIR HAMRI <yassirhamri2005@gmail.com>